--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,8 +22,22 @@ fastapi-mail = "^1.4.2"
 slowapi = "^0.1.9"
 cloudinary = "^1.42.2"
 python-dotenv = "^1.0.1"
+sphinx = "^8.2.1"
+pytest = "^8.3.4"
+pytest-asyncio = "^0.25.3"
+httpx = "^0.28.1"
+aiosqlite = "^0.21.0"
+pytest-cov = "^6.0.0"
 
+
+[tool.poetry.group.dev.dependencies]
+sphinx = "^8.2.1"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = "."
+filterwarnings = "ignore::DeprecationWarning"
+asyncio_default_fixture_loop_scope = "function"
